# local-ai

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pack.sh  pyproject.toml
.github/workflows/: test.yml
src/: app.py  config.py  main.py  paths.py
src/core/: llm_adapter.py
src/ui/: chat.py  t2i.py
tests/: conftest.py  test_chat_cancellation.py  test_chat_model_selection.py  test_llm_adapter.py  test_llm_runner.py  test_paths.py
