[project]
name = "local-ai"
version = "0.1.0"
description = "Flet-based desktop app for local LLM chat via llama.cpp"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Brian Buckley", email = "bbuckley123@gmail.com" }
]
license = { file = "LICENSE" }
keywords = ["local-ai", "llm", "flet", "chatbot"]
dependencies = [
  "flet==0.28.3",
  "llama-cpp-python>=0.3.15",
  "pytest-asyncio>=1.1.0",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "brianbuckley"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "local-ai"

# company name to display in about app dialogs
company = "Brianbuckley"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Brian Buckley"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
    "black==25.1.0",
    "ruff==0.12.7",
    "pytest==8.3.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
pytest = "8.3.3"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["dist", "build", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["core", "ui"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "preserve"         # or "double"/"single"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
